<resources>
    <string name="app_name">StoreItems</string>

    <string name="tech_List">Tech</string>
    <string name="clothes_List">Clothes</string>
    <string name="home_List">Home</string>


    <string name="tech_shop1">Apple</string>
    <string name="tech_shop2">Samsung</string>
    <string name="tech_shop3">Asus</string>
    <string name="tech_shop4">Lg</string>
    <string name="tech_shop5">Sony</string>


    <string name="clothes_shop1">CK</string>
    <string name="clothes_shop2">Lee</string>
    <string name="clothes_shop3">Levis</string>

    <string name="Home_shop1">City</string>
    <string name="Home_shop2">Village</string>
    <string name="Home_shop3">beach</string>

    <string name="title_shop">Shop</string>
    <string name="title_addItem">Add Item</string>
    <string name="title_history">History</string>
    <string name="title_setting">Setting</string>
    <string name="title_basket">Basket</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
